--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,39 +1,24 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
+name: On Push Run
 
-name: Python application
+on: push
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-permissions:
-  contents: read
+env:
+  testing_github_action_DIR: screener_pull_stockprice
 
 jobs:
-  build:
-
+  Stock-Price:
+    name: Stock Info
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
+    - name: Check-out devops repository
+      uses: actions/checkout@v2
       with:
-        python-version: "3.10"
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
-      run: |
-        pytest
+        repository: kbbabu/screener_pull_stockprice
+        token: ${{ secrets.GITHUB_TOKEN }}
+        path: ${{ env.screener_pull_stockprice_DIR }}
+
+    - name: Hello World
+      run: python ${{ env.screener_pull_stockprice_DIR }}/screener.py
+      shell: sh
