--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -18,7 +18,11 @@ jobs:
         repository: kbbabu/screener_pull_stockprice
         token: ${{ secrets.GITHUB_TOKEN }}
         path: ${{ env.screener_pull_stockprice_DIR }}
-        run: pip install -r requirements.txt 
+        
+    - name: install python packages
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt    
 
     - name: Nifty 50 stock information
       run: python ${{ env.screener_pull_stockprice_DIR }}/nifty_50_data.py
