--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -14,15 +14,17 @@ jobs:
     steps:
     - name: Check-out repository
       uses: actions/checkout@v2
+      
+    - name: install python packages
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt 
+    - name: Repository
       with:
         repository: kbbabu/screener_pull_stockprice
         token: ${{ secrets.GITHUB_TOKEN }}
         path: ${{ env.screener_pull_stockprice_DIR }}
-        
-    - name: install python packages
-      run: |
-        python -m pip install --upgrade pip
-        pip install ${{ env.screener_pull_stockprice_DIR }}/requirements.txt    
+           
 
     - name: Nifty 50 stock information
       run: python ${{ env.screener_pull_stockprice_DIR }}/nifty_50_data.py
