--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -14,17 +14,20 @@ jobs:
     steps:
     - name: Check-out repository
       uses: actions/checkout@v2
+      
+    - name: setup python
+      uses: actions/setup-python@v4
       with:
-        repository: kbbabu/screener_pull_stockprice
-        token: ${{ secrets.GITHUB_TOKEN }}
-        path: ${{ env.screener_pull_stockprice_DIR }}
-           
+        python-version: '3.9' # install the python version needed
+    
     - name: install python packages
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-
-    - name: Nifty 50 stock information
-      run: python ${{ env.screener_pull_stockprice_DIR }}/nifty_50_data.py
       
+    - name: execute py script # run main.py
+      env:
+        SOME_SECRET: ${{ secrets.SOME_SECRET }}
+        run: python nifty_50_data.py
+              
       shell: sh
