--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,10 +5,10 @@ name: On Push Run
 on: push
 
 jobs:
-  Stock-Price:
-    name: Stock Info
+  build:
     runs-on: ubuntu-latest
     steps:
+    
     - name: Check-out repository
       uses: actions/checkout@v2
       
@@ -22,7 +22,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
       
-    - name: execute py script # nifty_50_data.py
+    - name: execute py script #nifty_50_data.py
       env:
         SOME_SECRET: ${{ secrets.SOME_SECRET }}
         run: python nifty_50_data.py
