--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -6,6 +6,10 @@ name: run nifty_50_data.py
 on:
   schedule:
     - cron: '5 * * * *'
+  push: 
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 permissions:
   contents: read
