--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,11 +5,11 @@ name: run nifty_50_data.py
 
 on:
   schedule:
-    - cron: '5 * * * *'
-  push: 
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    - cron: '6 * * * *'
+  #push: 
+  # branches: [ "main" ]
+  #pull_request:
+  #  branches: [ "main" ]
 
 permissions:
   contents: read
@@ -33,4 +33,8 @@ jobs:
     - name: execute py script #nifty_50_data.py
       run: |
         python nifty_50_data.py
-        
+     
+    - name: push changes
+      uses: ad-m/github-push-action@v0.6.0
+      with:
+        branch: main     
