--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,6 +31,8 @@ jobs:
         # pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: execute py script #nifty_50_data.py
+      env:
+        SOME_SECRET: ${{ secrets.SOME_SECRET }}
       run: |
         python nifty_50_data.py
      
