--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -4,10 +4,11 @@
 name: run nifty_50_data.py
 
 on:
+  push:
   schedule:
     - cron: '5 * * * *'
-  push: 
-   branches: [ "main" ]
+  #push: 
+   #branches: [ "main" ]
   #pull_request:
   #  branches: [ "main" ]
 
